--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Señalar</string>
+    <string name="des_logo_senalar">Logo aplicación Señalar</string>
+    <string name="app_title">señalAR</string>
+    <string name="how_to_use">¿Cómo se usa?</string>
+    <string name="how_it_works">¿Cómo funciona?</string>
+    <string name="start_translate">Iniciar traducción</string>
 </resources>
