--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,5 @@
     <string name="how_to_use">¿Cómo se usa?</string>
     <string name="how_it_works">¿Cómo funciona?</string>
     <string name="start_translate">Iniciar traducción</string>
-    <string name="text_sample">ESTO ES UN TEXTO DE EJEMPLO</string>
+    <string name="text_sample">(EN ESTA SECCION APARECERAN LOS SUBTITULOS)</string>
 </resources>
