--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,10 @@
     <string name="how_it_works">¿Cómo funciona?</string>
     <string name="start_translate">Iniciar traducción</string>
     <string name="text_sample">(EN ESTA SECCION APARECERAN LOS SUBTITULOS)</string>
+    <string name="choose_language">"Idioma de traducción"</string>
+    <string name="accept">"Aceptar"</string>
+    <string name="cancel">"Cancelar"</string>
+    <string name="lang_spanish">Español</string>
+    <string name="lang_english">English</string>
+    <string name="lang_portuguese">Portuguese</string>
 </resources>
