--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="lang_spanish">Español</string>
     <string name="lang_english">English</string>
     <string name="lang_portuguese">Portuguese</string>
+    <string name="how_to_use_title">Cómo se usa la aplicación</string>
 </resources>
