--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,9 @@
     <string name="app_name">Señalar</string>
     <string name="des_logo_senalar">Logo aplicación Señalar</string>
     <string name="app_title">SeñalAR</string>
+    <string name="subscribe_title">Subscribirse</string>
+    <string name="subscribe_description">La subscripción a la versión premium elimina los anuncios de la aplicación</string>
+    <string name="subscribe_price">¡A sólo $150 por mes!</string>
     <string name="how_to_use">¿Cómo se usa?</string>
     <string name="how_it_works">¿Cómo funciona?</string>
     <string name="start_translate">Iniciar traducción</string>
@@ -17,4 +20,13 @@
     <string name="google_login">Google Login</string>
     <string name="sign_in_with_google">Entrar con Google</string>
     <string name="sign_out">Desconectarse</string>
+    <string name="title_activity_start_subscription">StartSubscription</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 </resources>
